--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14"
+    "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.24"
   }
 }
